--- a/Web/index.css
+++ b/Web/index.css
@@ -126,22 +126,31 @@ body {
 .solution .input-text {
   width: 100%;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+}
+#ipstring {
+  padding: 10px;
+  font-size: 25px;
+}
+.fun {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+}
+.fun button {
+  height: 100%;
+  width: 10%;
 }
 
-#partitioned {
-  padding-left: 15px;
-  letter-spacing: 42px;
-  border: 0;
-  background-image: linear-gradient(
-    to left,
-    black 70%,
-    rgba(255, 255, 255, 0) 0%
-  );
-  background-position: bottom;
-  background-size: 50px 1px;
-  background-repeat: repeat-x;
-  background-position-x: 35px;
-  width: 220px;
-  outline: none;
+.main {
+  /* margin-top: 50px; */
+  margin-left: 30px;
+  height: 500px;
+}
+
+.moore-machine {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
