--- a/Web/states.css
+++ b/Web/states.css
@@ -7,23 +7,50 @@
   flex-direction: column;
 }
 
+.q1 {
+  margin-right: 78px;
+}
+.q2 {
+  margin-bottom: 50px;
+  margin-right: 78px;
+}
+.q3 {
+  margin-right: 78px;
+}
+
 .badge {
+  font-size: 22px;
   color: #fff;
   border: solid #f6f6f6;
-  width: 25px;
-  height: 20px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   padding: 11px 10px 8px 6px;
+  margin-top: 100px;
+}
+
+.badge sup {
+  font-size: 34px;
+}
+
+.badge sub {
+  font-size: 28px;
 }
 
 .left {
   height: 53px;
-  margin-top: 11px;
+  margin-top: 108px;
+}
+
+.left .txt {
+  color: #f6f6f6;
+  font-size: 20px;
+  text-align: left;
 }
 
 .left .line {
   margin-top: 7px;
-  width: 40px;
+  width: 65px;
   background: #fff;
   height: 5px;
   float: left;
@@ -38,9 +65,17 @@
   float: right;
 }
 
-.down {
+/* .down {
   height: 53px;
-  display: block;
+  display: relative;
+}
+
+.down .txt {
+  color: #f6f6f6;
+  font-size: 20px;
+  position: absolute;
+  margin-top: 7px;
+  margin-left: 25px;
 }
 
 .down .line {
@@ -55,5 +90,5 @@
   border-right: 10px solid transparent;
   border-top: 13px solid #fff;
   position: absolute;
-  margin-left: 12.5px;
-}
+  margin-left: 30.5px;
+} */
