--- a/Web/index.css
+++ b/Web/index.css
@@ -140,17 +140,56 @@ body {
 .fun button {
   height: 100%;
   width: 10%;
+  font-size: 20px;
+  background-color: #2b2b2b;
+  border: #e9e581 solid;
+  color: #e9e581;
+  border-radius: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+  transition: 300ms ease-out;
+}
+
+.fun button:hover {
+  color: #2b2b2b;
+  background-color: #e9e581;
+  transform: translateY(-5px);
+}
+.fun button:active {
+  background-color: #514e02;
+  /* transition: 600ms ease-out; */
+}
+.fun select {
+  background-color: #2b2b2b;
+  border: #e9e581 solid;
+  color: #e9e581;
+  border-radius: 5px;
+  margin-left: 5px;
+  font-size: 20px;
+  padding: 5px;
 }
 
 .main {
   /* margin-top: 50px; */
+  display: flex;
   margin-left: 30px;
   height: 500px;
 }
 
 .moore-machine {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  /* margin: 0; */
+  position: relative;
+  padding: 20px;
+  /* top: 50%;
+  transform: translateY(-50%); */
+}
+
+.moore-output {
+  flex-grow: 1;
+  padding: 20px;
+  color: #f6f6f6;
+  font-size: 42px;
+  letter-spacing: 25px;
+  max-width: 450px;
+  overflow-wrap: break-word;
 }
