--- a/main.css
+++ b/main.css
@@ -11,13 +11,15 @@ body {
 .container {
   display: flex;
   font-family: monospace;
-  width: 100%;
   height: 100%;
+  width: auto;
 }
 
 .menubar {
+  display: block;
   padding: 10px;
-  width: 300px;
+  height: 100%;
+  width: auto;
   color: #f6f6f6;
   background-color: darkmagenta;
   transition: all 1s ease-in-out;
@@ -44,6 +46,58 @@ body {
   margin-top: 20px;
   overflow: hidden;
   font-size: 25px;
+}
+
+.overlayMenu {
+  padding: 20px;
+  color: #f6f6f6;
+  display: none;
+  height: fit-content;
+}
+
+/* Overlay Menubar */
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: darkmagenta;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #f6f6f6;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 /* Underline styles */
@@ -93,14 +147,27 @@ body {
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: auto;
 }
 
 .title {
   display: flex;
   justify-content: center;
-  font-size: 90px;
+  /* width: 100%; */
+  /* transform: translateY(0px); */
+  position: relative;
+}
+
+.title .heading {
   transition: all 1s ease-in-out;
-  transform: translateY(100px);
+  font-size: 90px;
+  margin: 0;
+  top: 50%;
+  position: relative;
+  /* left: 50%; */
+  /* -ms-transform: translateY(-50%);
+  transform: translateY(-50%); */
 }
 
 .problemstate {
@@ -109,6 +176,10 @@ body {
   transition: all 1s ease-in-out;
   font-size: 32px;
   line-height: 1.4;
+}
+
+#pstatement {
+  visibility: hidden;
 }
 
 .problemstate .con {
@@ -121,6 +192,10 @@ body {
   transition: all 1s ease-in-out;
   transform: translateY(600px);
   flex-grow: 1;
+}
+
+#solstate {
+  visibility: hidden;
 }
 
 .solution .input-text {
@@ -190,6 +265,29 @@ body {
   color: #f6f6f6;
   font-size: 42px;
   letter-spacing: 25px;
-  max-width: 450px;
+  max-width: 400px;
   overflow-wrap: break-word;
+}
+
+/* OverlayMenu */
+@media only screen and (max-width: 1200px) {
+  .menubar {
+    display: none;
+  }
+  .overlayMenu {
+    display: unset;
+  }
+  .main {
+    display: block;
+  }
+  .solution .input-text {
+    display: block;
+  }
+  .fun {
+    margin-top: 5px;
+    height: 52px;
+  }
+  .title .heading {
+    font-size: 70px;
+  }
 }
