--- a/states.css
+++ b/states.css
@@ -18,6 +18,22 @@
   margin-right: 78px;
 }
 
+#q1 {
+  background-color: transparent;
+}
+#q2 {
+  background-color: transparent;
+}
+#q3 {
+  background-color: transparent;
+}
+#q4 {
+  background-color: transparent;
+}
+#q5 {
+  background-color: transparent;
+}
+
 .badge {
   font-size: 22px;
   color: #fff;
